--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,14 @@
 .App {
   text-align: center;
 }
+
+:root {
+  --swatch-coffee: "#775940";
+  --swatch-ivory: "#F9FAF0";
+  --swatch-fuzzy_wuzzy: "#C96971";
+  --swatch-forest_green_crayola: "#72AD7D";
+  --swatch-cg_blue: "#247BA0";
+  --swatch-cadet_blue: "#61A0AF";
+  --swatch-olive_drab_7: "#3D3522";
+}
+
