Commit what I have.

--- a/src/App.css
+++ b/src/App.css
@@ -10,5 +10,6 @@
   --swatch-cg_blue: "#247BA0";
   --swatch-cadet_blue: "#61A0AF";
   --swatch-olive_drab_7: "#3D3522";
+  --swatch-grey: "989898";
 }
 
