--- a/src/App.css
+++ b/src/App.css
@@ -1,15 +1,30 @@
+:root {
+  --swatch-coffee              : #775940;
+  --swatch-ivory               : #F9FAF0;
+  --swatch-fuzzy_wuzzy         : #C96971;
+  --swatch-forest_green_crayola: #72AD7D;
+  --swatch-cg_blue             : #247BA0;
+  --swatch-cadet_blue          : #61A0AF;
+  --swatch-olive_drab_7        : #3D3522;
+  --swatch-grey                : 989898;
+}
+
 .App {
   text-align: center;
 }
 
-:root {
-  --swatch-coffee: "#775940";
-  --swatch-ivory: "#F9FAF0";
-  --swatch-fuzzy_wuzzy: "#C96971";
-  --swatch-forest_green_crayola: "#72AD7D";
-  --swatch-cg_blue: "#247BA0";
-  --swatch-cadet_blue: "#61A0AF";
-  --swatch-olive_drab_7: "#3D3522";
-  --swatch-grey: "989898";
+#root {
+  font-family: "Lexend Exa";
+  color: var(--swatch-olive_drab_7);
+  position: absolute;
+  width: 100%;
+  left: 0px;
+  height: 100%;
+  top: 0px;
+  overflow-x: hidden;
+  overflow-y: visible;
 }
 
+body {
+  background-color: var(--swatch-ivory);
+}
