--- a/src/App.css
+++ b/src/App.css
@@ -74,3 +74,21 @@ body {
 input[type="file"] {
   visibility: hidden;
 }
+
+.create-app {
+  display: inline-block;
+  padding: 5px;
+  margin-right: 30px;
+  width: 125px;
+  cursor: pointer;
+  border-radius: 20px;
+  background-color: var(--swatch-coffee);
+  color: var(--swatch-ivory);
+  border: 2px solid var(--swatch-ivory);
+}
+
+.create-app:hover {
+  color: var(--swatch-coffee);
+  background-color: var(--swatch-ivory);
+  border: 2px solid var(--swatch-coffee);
+}
