loading screen implemented

--- a/src/App.css
+++ b/src/App.css
@@ -38,7 +38,7 @@ body {
 }
 
 #content-wrapper {
-  height: calc(100% - 110px);
+  height: calc(100vh - 110px);
   width: 95%;
   left: 2.5%;
   position: relative;
